--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
-    background: #000000;
+    background-color: #000000;
 
     margin: 0;
     color: #fff; /* white netx поверх dark video */
@@ -284,6 +284,7 @@ ul {
 .HERO-LOGO {
 
 }
+
 
 
 
