--- a/style.css
+++ b/style.css
@@ -104,13 +104,11 @@ ul {
 }
 
 /* dark пленка поверх pucture */
-.hero::before {
+/* .hero::before {
     content: "";
     position: absolute;
     inset: 0;
-    background: radial-gradient(circle at center, rgba(31, 31, 31, 0.3), rgba(0, 0, 0, 0.85));
-
-}
+    background: radial-gradient(circle at center, rgba(31, 31, 31, 0.3), rgba(0, 0, 0, 0.85));} */
 
 /* block with text поверх */
 .hero-overlay {
@@ -159,16 +157,17 @@ ul {
     color: #76ce25;
     
 }
-.bg-video {
+/*
+ .bg-video {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     object-fit: cover; /* заполняет не искажая экран */
-    z-index: -2; /*under all contents */
-    filter: brightness(0.35); /* затемнить, чтобы текст был читаемым */
-}
+   /* z-index: -2; /*under all contents */
+    /*filter: brightness(0.35); /* затемнить, чтобы текст был читаемым */
+/*}
 
 .hero-content h1 {
     font-family: "Rubik Glitch", system-ui;
@@ -284,6 +283,7 @@ ul {
 .HERO-LOGO {
 
 }
+
 
 
 
