--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #111111; /*add black bg because video-bg not download */
+    background-color: linear-gradient(135deg, #525252A 0%, #2e2e2e 100%); /*add black bg because video-bg not download */
 
     margin: 0;
     color: #fff; /* white netx поверх dark video */
@@ -283,6 +283,7 @@ ul {
 .HERO-LOGO {
 
 }
+
 
 
 
